--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="i0QdRoDeaw8PQbnJD8svUp94XwOs5fZlTnrdTGqHEHs" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>How to Make Thai Tea at Home: A Sweet, Rich, and Vibrant Delight</title>
   <meta name="description" content="Learn how to make Thai tea at home with this easy recipe! Discover why Thai tea is loved for its sweet, rich flavor and vibrant orange color. Perfect for tea lovers of all levels!">
   <meta name="keywords" content="Thai tea">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="">
-    <link rel="alternate" hreflang="en" href="">
+    <link rel="canonical" href="https://richtea.netlify.app/">
+    <link rel="alternate" hreflang="en" href="https://richtea.netlify.app/">
     <link rel="icon" href="logotea1.png" type="image/x-icon">
     
     <script type="application/ld+json">
@@ -17,7 +18,7 @@
             "@type": "WebPage",
             "name": "How to Make Thai Tea at Home: A Sweet, Rich, and Vibrant Delight",
             "description": "Learn how to make Thai tea at home with this easy recipe! Discover why Thai tea is loved for its sweet, rich flavor and vibrant orange color. Perfect for tea lovers of all levels!",
-            "url": ""
+            "url": "https://richtea.netlify.app/"
         }
         </script>
   <style>
