--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
+<meta name="google-site-verification" content="i0QdRoDeaw8PQbnJD8svUp94XwOs5fZlTnrdTGqHEHs" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>How to Make Thai Tea at Home: A Sweet, Rich, and Vibrant Delight</title>
   <meta name="description" content="Learn how to make Thai tea at home with this easy recipe! Discover why Thai tea is loved for its sweet, rich flavor and vibrant orange color. Perfect for tea lovers of all levels!">
